// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`macros 1. macros: 1. macros 1`] = `
"

import Icon from "react-icons/macro";
<Icon icon="FcAcceptDatabase" />;
    

      ↓ ↓ ↓ ↓ ↓ ↓

import { Icon as _Icon } from "react-icons";
import { FcAcceptDatabase as _FcAcceptDatabase } from "react-icons/icons/fc";
<_Icon icon={_FcAcceptDatabase} />;
"
`;

exports[`macros 2. macros: 2. macros 1`] = `
"

import Icon from "react-icons/macro";
<Icon icon={process.env.TEST ? "FcAcceptDatabase" : "FcAddDatabase"} />;
    

      ↓ ↓ ↓ ↓ ↓ ↓

import { Icon as _Icon } from "react-icons";
import {
  FcAcceptDatabase as _FcAcceptDatabase,
  FcAddDatabase as _FcAddDatabase,
} from "react-icons/icons/fc";
<_Icon icon={process.env.TEST ? _FcAcceptDatabase : _FcAddDatabase} />;
"
`;

exports[`macros 3. macros: 3. macros 1`] = `
"

import Icon from "react-icons/macro";
const Save = Icon.of("BiSave");
    

      ↓ ↓ ↓ ↓ ↓ ↓

import { Icon as _Icon } from "react-icons";
import { BiSave as _BiSave } from "react-icons/icons/bi";
const Save = props => <_Icon icon={_BiSave} {...props} />;
"
`;

exports[`macros 4. macros: 4. macros 1`] = `
"

import Icon from "react-icons/macro";
const Save = Icon.of("BiSave", { fontSize: "2em" });
    

      ↓ ↓ ↓ ↓ ↓ ↓

import { Icon as _Icon } from "react-icons";
import { BiSave as _BiSave } from "react-icons/icons/bi";
const Save = props => <_Icon icon={_BiSave} fontSize="2em" {...props} />;
"
`;
